--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
   },
   "homepage": "https://github.com/rezendeneto/moment-with-locales-es6#readme",
   "peerDependencies": {
-    "moment": "2.25.3"
+    "moment": "^2.29.1"
   },
 	"resolutions": {
-		"moment": "2.25.3"
+		"moment": "^2.29.1"
 	}
 }
